--- a/src/android/Freshchat/build.gradle
+++ b/src/android/Freshchat/build.gradle
@@ -7,6 +7,5 @@ allprojects {
 
 dependencies {
     compile 'com.github.freshdesk:freshchat-android:1.5.1'
-	  compile 'com.google.android.gms:play-services-gcm:11.+'
-	
+    compile 'com.google.firebase:firebase-messaging:11.+'
 }
